# template-fastapi

./: README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py  store.py
app/api/api_v1/endpoints/: test.py
app/core/: config.py
app/crud/: base.py  crud_item.py
app/db/: init_db.py  query_builder.py  session.py
app/models/: item.py
app/schemas/: __init__.py  item.py
