[tool.poetry]
name = "esty datas"
version = "0.1.0"
description = ""
authors = ["Hoàng Hữu Mạnh <hoanghuumanh54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
alembic = "^1.6.5"
python-dotenv = "^0.17.1"
psycopg2-binary = "^2.8.6"
fastapi-profiler = "^1.0.0"
sqltap = "^0.3.11"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
requests = "^2.26.0"
python-multipart = "^0.0.5"
SQLAlchemy = "1.3.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
